@@ -5,7 +5,7 @@ title = Edit Topic
 validators..AddCriterion = validate_add_criterion
 validators..SetSortCriterion = validate_set_sort
 validators..Remove = validate_remove_criterion
-validators = validate_add_criterion
+validators =
 
 [actions]
 action.failure=traverse_to:string:criterion_edit_form
